fixed footer text on mobile res ticket 60

--- a/wp-content/themes/wpex-pytheas/assets/css/custom-styles.css
+++ b/wp-content/themes/wpex-pytheas/assets/css/custom-styles.css
@@ -423,3 +423,11 @@ body.page-id-206 div#left-menu,body.page-id-165 div#left-menu,body.page-id-118 d
         width: 100%;
     }
 }
+/*
+* CENTERING FOOTER TEXT
+*/
+@media only screen and (min-width: 320px) and (max-width: 768px){
+    div#copyright{
+        text-align: center;
+    }
+}
